<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/F_book"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/bTitle"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/Hint"
        android:layout_marginLeft="15dp"
        android:textAlignment="center"
        android:textSize="23sp"/>

    <EditText
        android:id="@+id/bISBN"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="165dp"
        android:hint="@string/bISBN"
        android:layout_marginLeft="15dp"
        android:textAlignment="center"
        android:textSize="23sp"/>

    <Button
        android:id="@+id/conditionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textSize="20sp"
        android:padding="15dp"
        android:onClick="showPopup"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNx"
        android:textSize="20sp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="300dp"
        android:onClick="PriceActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonB"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="300dp"
        android:onClick="MainActivity"
        />

</RelativeLayout>