<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/StepF"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/scanB"
        android:layout_width="323dp"
        android:layout_height="61dp"
        android:layout_marginTop="100dp"
        android:text="@string/scan"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/findB"
        android:layout_width="323dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="210dp"
        android:text="@string/m_list"
        android:textSize="25sp"
        android:onClick="FindActivity"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:padding="15dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textSize="25sp" />

</RelativeLayout>