<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/stepP"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/EntP"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/listType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:text="@string/option"
        android:textSize="20sp"/>

    <TextSwitcher
        android:id="@+id/TextSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:layout_marginTop="80dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNx"
        android:textSize="20sp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="340dp"
        android:onClick="PickActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonB"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="340dp"
        android:onClick="FindActivity" />

</RelativeLayout>