<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/stepPi"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNx"
        android:textSize="20sp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="340dp"
        android:onClick="ListActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonB"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="340dp"
        android:onClick="PriceActivity" />

</RelativeLayout>